# waimakers-news

./: .gitignore  README.md  agent.py  app.js  cursor_mcp_config.json  example_agent_usage.py  index.html  news_fetcher.py  requirements.txt  styles.css
elevenlabs_mcp/: README.md  __init__.py  __main__.py  elevenlabs_api.py  pyproject.toml  server.py
waimakers_mcp_agent/waimakers_mcp_agent/dashboard/: app.js  styles.css
